--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </h2>
           <p class="cargo_main">Desenvolvedor Front End</p>
           <p class="descricao_main">
-            Fico feliz em vê-lo (a) por aqui. Espero que aproveite o conteúdo e
+            Fico feliz em vê-lo(a) por aqui. Espero que aproveite o conteúdo e
             que eu possa te ajudar de alguma forma.
           </p>
           <a href="#sobre"><button class="button">Conhecer mais</button></a>
@@ -174,7 +174,7 @@
         </div>
         <div class="bloco_destaque bloco-rigth">
           <p class="numero"><span class="destaque_numero">+</span> 03</p>
-          <p class="destaque_descricao">Cursos Front End concluídos</p>
+          <p class="destaque_descricao">Cursos de Desenvolvimento Front End concluídos</p>
         </div>
       </section>
       <section class="section_qualificacoes" id="qualificacoes">
@@ -291,11 +291,8 @@
               <p class="cargo">Freelancer</p>
               <p class="descricao">
                 Nesse trabalho, além de poder contribuir para o projeto do
-                cliente, puder revisar e aprendar conceitos importantes da base
-                do front-end. O cliente solicitou um trabalho, no qual o foco do
-                trabalho era fazer o layout de uma aplicação disponibilizada no
-                figma, e as ferramentas solicitadas para esse trabalho foram
-                HTML, CSS e JS. A workana era a plataforma de intermédio.
+                cliente, revisei e aprendi conceitos importantes da base
+                do front end. O cliente solicitou um trabalho, no qual o foco era fazer o layout de uma aplicação disponibilizada no figma. Foi utilizado HTML, CSS e JS para a execução. A workana era a plataforma de intermédio.
               </p>
               <p class="conclusao">
                 <i class="fa-regular fa-calendar-days"></i> 2023 - Janeiro ( 1
@@ -311,32 +308,30 @@
             Conheça quais são os meus <span class="destaque">serviços</span>
           </h2>
           <p class="descricao">
-            Metodologias que eu utilizo nos meus trabalhos.
+            Metodologias que utilizo em meus trabalhos.
           </p>
         </header>
         <div class="container_servico">
           <div class="bloco_servico">
             <h3 class="titulo">Desenvolvimento Web</h3>
             <p class="descricao">
-              Um desenvolvimento focado na criação de sites, páginas únicas,
+              Desenvolvimento focado na criação de sites, páginas únicas,
               e-commerce e outras aplicações. Promovendo uma boa experiência e
-              uma boa otimização do site.
+              excelente otimização do site.
             </p>
           </div>
           <div class="bloco_servico">
             <h3 class="titulo">Desenvolvimento Responsivo</h3>
             <p class="descricao">
-              Aplicação web responsiva, disponível para todos os dispositivos
-              móveis, tornando o site mais prático e acessível. Ou aplicações
-              100% mobile, como aplicativos.
+              Aplicação web responsiva é disponível para todos os dispositivos
+              móveis, tornando o site mais prático e acessível. Aplicavel tambem para Apps
+              100% mobile.
             </p>
           </div>
           <div class="bloco_servico">
             <h3 class="titulo">Experiência do usuário</h3>
             <p class="descricao">
-              Aplicações voltadas a um conjunto de elementos e fatores de um
-              serviço, produto ou sistema que tem como objetivo promover uma boa
-              experiência para o usuário.
+              Aplicações voltadas a um conjunto de elementos e fatores de serviço, produto e/ou sistema, tendo principal objetivo promover a melhor experiência possivel para o usuário      experiência para o usuário.
             </p>
           </div>
         </div>
@@ -481,7 +476,7 @@
         <header class="cabecalho_contato">
           <h2 class="titulo titulo_contato">Networking</h2>
           <p class="descricao descricao_contato">
-            Você pode me enviar um e-mail ou conversar diretamente através das
+            Você pode me enviar um e-mail ou conversar diretamente comigo através das
             minhas redes sociais.
           </p>
         </header>
