--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="container_main">
           <p class="destaque_main">De Advogado a Desenvolvedor Front End</p>
           <h2 class="titulo_main">
-            Olá, eu sou <span class="destaque">Vitor </span>
+            Olá, eu sou o <span class="destaque">Vitor</span>
           </h2>
           <p class="cargo_main">Desenvolvedor Front End</p>
           <p class="descricao_main">
