--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="container_main">
           <p class="destaque_main">De Advogado a Desenvolvedor Front End</p>
           <h2 class="titulo_main">
-            Olá, eu sou o <span class="destaque">Vitor</span>
+            Olá, eu sou o <span class="destaque">Vono</span>
           </h2>
           <p class="cargo_main">Desenvolvedor Front End</p>
           <p class="descricao_main">
@@ -121,12 +121,7 @@
             Node e JavaScript.
           </h3>
           <p class="descricao_sobre">
-            Após seis anos nos tribunais, agora o meu foco é aplicar minhas
-            habilidades em negociação, conciliação e solução de problemas na
-            inovadora e criativa área de desenvolvimento de software. Atualmente
-            estudo no curso intensivo profissionalizante de Desenvolvimento
-            Frontend na EBAC (Escola Britânica de Artes Criativas e Tecnologia)
-            em conjunto o Foundations Course do theodinproject.com.
+            Após seis anos nos tribunais, agora o meu foco é aplicar minhas habilidades em negociação, conciliação e solução de problemas na inovadora e criativa área de desenvolvimento de software. Atualmente estudo no curso intensivo profissionalizante de Desenvolvimento Frontend na EBAC (Escola Britânica de Artes Criativas e Tecnologia) em conjunto o Foundations Course do theodinproject.com.
           </p>
           <p class="descricao_sobre">
             Abaixo segue o meu currículo com informçôes mais detalhadas sobre
@@ -389,36 +384,12 @@
         <h2 class="titulo_projeto">Meus projetos</h2>
         <div class="container_projetos">
           <div class="card_projeto">
-            <img src="img/landing-page.png" alt="" class="imagem_fundo" />
-            <div class="card_descricao">
-              <h3 class="titulo_card">Landing-page</h3>
-              <nav class="card_nav">
-                <a
-                  href="https://github.com/vitorvono/Landing-page-mercado-financeiro"
-                  class="link"
-                  target="_blank"
-                  aria-label="Abrir Github"
-                >
-                  <button class="button github">GitHub</button></a
-                >
-                <a
-                  href="https://landing-page-financeiro.netlify.app/"
-                  class="link"
-                  target="_blank"
-                  aria-label="Abrir página"
-                >
-                  <button class="button site">Site</button>
-                </a>
-              </nav>
-            </div>
-          </div>
-          <div class="card_projeto">
             <img src="img/toDo.png" alt="" class="imagem_fundo" />
             <div class="card_descricao">
               <h3 class="titulo_card">To-Do List</h3>
               <nav class="card_nav">
                 <a
-                  href="https://github.com/ViniciusTorresof/To-do-List"
+                  href="https://github.com/vitorvono"
                   class="link"
                   target="_blank"
                   aria-label="Abrir Github"
@@ -442,7 +413,7 @@
               <h3 class="titulo_card">Página de Cadastro</h3>
               <nav class="card_nav">
                 <a
-                  href="https://github.com/ViniciusTorresof/Pagina-de-cadastro"
+                  href="https://github.com/vitorvono/"
                   class="link"
                   target="_blank"
                   aria-label="Abrir Github"
@@ -476,7 +447,7 @@
         <header class="cabecalho_contato">
           <h2 class="titulo titulo_contato">Networking</h2>
           <p class="descricao descricao_contato">
-            Você pode me enviar um e-mail ou conversar diretamente comigo através das
+            Me envie um e-mail ou converse diretamente comigo através das
             minhas redes sociais.
           </p>
         </header>
@@ -505,7 +476,7 @@
           </div>
           <div class="item_rede">
             <a
-              href="https://www.instagram.com/vhvono/"
+              href="https://www.instagram.com/vono/"
               class="link"
               target="_blank"
               aria-label="Abrir Instagram de Vitor"
