--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Vitor Hugo Colino Vono | Desenvolvedor Front End</title>
+    <title>Vitor Vono | Desenvolvedor Front End</title>
   </head>
   <body>
     <header class="header">
@@ -64,7 +64,7 @@
         <div class="container_main">
           <p class="destaque_main">De Advogado a Desenvolvedor Front End</p>
           <h2 class="titulo_main">
-            Olá, eu sou o <span class="destaque">Vono</span>
+            Olá, eu sou o <span class="destaque">Vitor Vono</span>
           </h2>
           <p class="cargo_main">Desenvolvedor Front End</p>
           <p class="descricao_main">
@@ -498,7 +498,7 @@
       </a>
     </main>
     <footer class="footer">
-      <h2 class="titulo">Vitor Hugo Colino Vono © 2023</h2>
+      <h2 class="titulo">Vitor Vono © 2023</h2>
     </footer>
     <script
       src="https://kit.fontawesome.com/b4aee6e34b.js"
