--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Vitor Vono | Desenvolvedor Front End</title>
+    <title>Vitor Hugo Colino Vono | Desenvolvedor Front End</title>
   </head>
   <body>
     <header class="header">
@@ -64,7 +64,7 @@
         <div class="container_main">
           <p class="destaque_main">De Advogado a Desenvolvedor Front End</p>
           <h2 class="titulo_main">
-            Olá, eu sou o <span class="destaque">Vitor Vono</span>
+            Olá, eu sou o <span class="destaque">Vitor</span>
           </h2>
           <p class="cargo_main">Desenvolvedor Front End</p>
           <p class="descricao_main">
@@ -121,7 +121,12 @@
             Node e JavaScript.
           </h3>
           <p class="descricao_sobre">
-            Após seis anos nos tribunais, agora o meu foco é aplicar minhas habilidades em negociação, conciliação e solução de problemas na inovadora e criativa área de desenvolvimento de software. Atualmente estudo no curso intensivo profissionalizante de Desenvolvimento Frontend na EBAC (Escola Britânica de Artes Criativas e Tecnologia) em conjunto o Foundations Course do theodinproject.com.
+            Após seis anos nos tribunais, agora o meu foco é aplicar minhas
+            habilidades em negociação, conciliação e solução de problemas na
+            inovadora e criativa área de desenvolvimento de software. Atualmente
+            estudo no curso intensivo profissionalizante de Desenvolvimento
+            Frontend na EBAC (Escola Britânica de Artes Criativas e Tecnologia)
+            em conjunto o Foundations Course do theodinproject.com.
           </p>
           <p class="descricao_sobre">
             Abaixo segue o meu currículo com informçôes mais detalhadas sobre
@@ -326,7 +331,7 @@
           <div class="bloco_servico">
             <h3 class="titulo">Experiência do usuário</h3>
             <p class="descricao">
-              Aplicações voltadas a um conjunto de elementos e fatores de serviço, produto e/ou sistema, tendo principal objetivo promover a melhor experiência possivel para o usuário      experiência para o usuário.
+              Aplicações voltadas a um conjunto de elementos e fatores de serviço, produto e/ou sistema, tendo principal objetivo promover a melhor experiência possivel para o usuário.
             </p>
           </div>
         </div>
@@ -413,7 +418,7 @@
               <h3 class="titulo_card">Página de Cadastro</h3>
               <nav class="card_nav">
                 <a
-                  href="https://github.com/vitorvono/"
+                  href="https://github.com/vitorvono "
                   class="link"
                   target="_blank"
                   aria-label="Abrir Github"
@@ -431,6 +436,55 @@
               </nav>
             </div>
           </div>
+          <div class="card_projeto">
+            <img src="img/pagina-seest.png" alt="" class="imagem_fundo" />
+            <div class="card_descricao">
+              <h3 class="titulo_card">SEEST - Engenharia</h3>
+              <nav class="card_nav">
+                <a
+                  href="https://github.com/vitorvono"
+                  class="link"
+                  target="_blank"
+                  aria-label="Abrir Github"
+                >
+                  <button class="button github">Github</button></a
+                >
+                <a
+                  href="https://seest-engenharia.vercel.app/"
+                  class="link"
+                  target="_blank"
+                  aria-label="Abrir página"
+                >
+                  <button class="button site">Site</button>
+                </a>
+              </nav>
+            </div>
+          </div>
+          <div class="card_projeto">
+            <img src="img/nanatureza.png" alt="" class="imagem_fundo" />
+            <div class="card_descricao">
+              <h3 class="titulo_card">Site do filme - Into the Wild</h3>
+              <nav class="card_nav">
+                <a
+                  href="https://github.com/vitorvono/landingpage_filme"
+                  class="link"
+                  target="_blank"
+                  aria-label="Abrir Github"
+                >
+                  <button class="button github">Github</button></a
+                >
+                <a
+                  href="https://landingpage-filme.vercel.app"
+                  class="link"
+                  target="_blank"
+                  aria-label="Abrir página"
+                >
+                  <button class="button site">Site</button>
+                </a>
+              </nav>
+            </div>
+          </div>
+          
         </div>
         <div class="container_button">
           <a
@@ -476,7 +530,7 @@
           </div>
           <div class="item_rede">
             <a
-              href="https://www.instagram.com/vono/"
+              href="https://www.instagram.com/vono.dev/"
               class="link"
               target="_blank"
               aria-label="Abrir Instagram de Vitor"
@@ -498,7 +552,7 @@
       </a>
     </main>
     <footer class="footer">
-      <h2 class="titulo">Vitor Vono © 2023</h2>
+      <h2 class="titulo">Vitor Hugo Colino Vono © 2023</h2>
     </footer>
     <script
       src="https://kit.fontawesome.com/b4aee6e34b.js"
